# RoboJoshRust

./: Cargo.toml
src/: main.rs
src/commands/: mod.rs  ping.rs
src/commands/fun/: eight_ball.rs  mod.rs
src/commands/test/: ping.rs
src/listeners/: handler.rs  mod.rs
src/listeners/events/: message.rs  mod.rs  ready.rs
