[package]
name = "robojosh"
version = "0.1.0"
authors = ["Matthew Lowe <jedijasper2004@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "standard_framework"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"